Prevented address bar autohide on mobile, to fix background image resizing on scroll

--- a/src/index.css
+++ b/src/index.css
@@ -37,23 +37,25 @@ button, a {
       /* https://stackoverflow.com/questions/21003535/anyway-to-prevent-the-blue-highlighting-of-elements-in-chrome-when-clicking-quic */
 }
 
-
 .stopScrolling {
+  /* https://www.geeksforgeeks.org/how-to-disable-scrolling-temporarily-using-javascript/ */
   height: 100%;
   overflow: hidden;
-}
-  /* https://www.geeksforgeeks.org/how-to-disable-scrolling-temporarily-using-javascript/ */
-
-
-                                /* Parallax */        
-      /* https://www.digitalocean.com/community/tutorials/css-pure-css-parallax */
-
-
-
-
-
-
+}  
+                                
                               /* HomeLanding.js */
+                              
+.wrapper {
+  /* To prevent address bar from hiding on mobile browsers, which would have caused the background image to resize on scroll */
+    /* https://stackoverflow.com/a/61683565/11528872 */
+  position: absolute;
+  top: 0.1px;
+  left: 0;
+  right: 0;
+  bottom: 0.5px;
+  overflow-x: hidden;
+  overflow-y: auto; 
+}                              
 
 .landingContainer {
   display: flex;
@@ -90,53 +92,6 @@ button, a {
   max-width: 45ch;
   line-height: 1.6;
 }
-
-
-/* .landingContainer {  
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  color: white;
-  text-align: center; 
-  overflow-wrap: anywhere; 
-}
-.landingContainer img {
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-  filter: brightness(60%);
-}
-.landingContainer h1, .landingContainer h2 {
-  position: absolute;  
-  left: 50%;
-  transform: translate(-50%, -50%);
-    https://www.freecodecamp.org/news/how-to-center-anything-with-css-align-a-div-text-and-more/
-}
-.landingContainer h1 {
-  font-size: clamp(2.2rem, 2.0058rem + 1.2427vw, 3rem);
-    https://css-tricks.com/linearly-scale-font-size-with-css-clamp-based-on-the-viewport/#for-those-who-dont-mind-that-edge-case
-  font-weight: 600;
-  color: white;  
-  top: 40%;
-  width: 100%;
-  padding: 0 .5em;
-}
-.landingContainer h2 {
-  font-size: clamp(1rem, 0.9892rem + 0.0693vw, 1.1rem);
-  font-weight: 300;
-  width: 85%;
-  max-width: 45ch;
-  line-height: 1.6;
-  top: 60%;
-}
-@media screen and (min-width: 497px) {
-  .landingContainer h1 {
-    top: 45%;
-  }
-  .landingContainer h2 {
-    top: 60%;
-  }
-} */
 
                               /* HomeAbout.js */
 .container {
